force-app/main/default/objects/Quotation__c/fields/Differential_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Differential_Carpet_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Differential Carpet Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>