force-app/main/default/objects/Quotation__c/fields/GST_Charges__c.field-meta.xml
<CustomField>
    <fullName>GST_Charges__c</fullName>
    <label>GST Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>