force-app/main/default/objects/Quotation__c/fields/Modified_All_in_Price__c.field-meta.xml
<CustomField>
    <fullName>Modified_All_in_Price__c</fullName>
    <label>Modified All in Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>