force-app/main/default/objects/Quotation__c/fields/Modified_AV_Value__c.field-meta.xml
<CustomField>
    <fullName>Modified_AV_Value__c</fullName>
    <label>Modified AV Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>