force-app/main/default/objects/Quotation__c/fields/Modified_Final_Committed_Area__c.field-meta.xml
<CustomField>
    <fullName>Modified_Final_Committed_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Modified Final Committed Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>