force-app/main/default/objects/Quotation__c/fields/Modified_GST__c.field-meta.xml
<CustomField>
    <fullName>Modified_GST__c</fullName>
    <label>Modified GST %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>