force-app/main/default/objects/Quotation__c/fields/Modified_GST_Charges__c.field-meta.xml
<CustomField>
    <fullName>Modified_GST_Charges__c</fullName>
    <label>Modified GST Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>