force-app/main/default/objects/Quotation__c/fields/Modified_Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Modified_Stamp_Duty__c</fullName>
    <label>Modified Stamp Duty %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>