force-app/main/default/objects/Quotation__c/fields/Modified_Stamp_Duty_Charges__c.field-meta.xml
<CustomField>
    <fullName>Modified_Stamp_Duty_Charges__c</fullName>
    <label>Modified Stamp Duty Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>