force-app/main/default/objects/Quotation__c/fields/Original_PSF_Rate__c.field-meta.xml
<CustomField>
    <fullName>Original_PSF_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Original PSF Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>