force-app/main/default/objects/Quotation__c/fields/Other_Charges_Tax__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Charges Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>