force-app/main/default/objects/Quotation__c/fields/Payment_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Payment_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Scheme</label>
    <referenceTo>Payment_Scheme__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>