force-app/main/default/objects/Quotation__c/fields/Pricing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan__c</fullName>
    <label>Pricing Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Plan</fullName>
            </value>
            <value>
                <fullName>Box Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>