force-app/main/default/objects/Quotation__c/fields/Quotation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>