force-app/main/default/objects/Quotation__c/fields/Quotation_Status__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Status__c</fullName>
    <label>Quotation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>