force-app/main/default/objects/Quotation__c/fields/Quotation_Type__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Type__c</fullName>
    <label>Quotation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quotation_Type</valueSetName>
    </valueSet>
</CustomField>