force-app/main/default/objects/Quotation__c/fields/Total_Other_Charges_Including_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges_Including_Tax__c</fullName>
    <label>Total Other Charges Including Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>